fixed Github/Linked button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,15 @@ h6 {
 
 /* ----- buttons frame ----- */
 .art-buttons-frame a {
-margin-left: 10px;
+  margin-left: 1px;
+}
+
+.art-buttons-frame b {
+  margin-left: 315px;
+}
+
+.art-buttons-frame c {
+  margin-left: 20px;
 }
 
 /* ----- suptitle ----- */
@@ -2841,6 +2849,16 @@ content (after 920px)
     flex-direction: column;
   }
   .art-banner .art-banner-overlay .art-banner-title .art-buttons-frame a {
+    max-width: 200px;
+    margin: 0 auto;
+  }
+
+  .art-banner .art-banner-overlay .art-banner-title .art-buttons-frame b {
+    max-width: 200px;
+    margin: 0 auto;
+  }
+
+  .art-banner .art-banner-overlay .art-banner-title .art-buttons-frame c {
     max-width: 200px;
     margin: 0 auto;
   }
